- Styling: fixed contentsection overflow issue.

--- a/RockWeb/Styles/styles-v2/rock-components/_content-section.scss
+++ b/RockWeb/Styles/styles-v2/rock-components/_content-section.scss
@@ -17,7 +17,6 @@
     background-color: var(--color-interface-softer);
     padding-left: 0;
     padding-right: 0;
-    overflow: hidden;
 }
 
 /* HEADER */
@@ -96,7 +95,7 @@ contentsection-body-overflow {
 /* OVERFLOW BODY */
 
 .contentsection-body-overflow-toggle {
-    margin-bottom: var(--spacing-small);
+    padding-bottom: var(--spacing-small);
 }
 
 .contentsection-body-overflow-toggle .btn {
